# findpkg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: index.rs  intern.rs  lib.rs  main.rs  phf.rs  search.rs  update.rs
systemd/: findpkg.service  findpkg.timer
tests/: benchmark.sh  database  integration.sh  list.csv  small-database  tests.rs
