[package]
name = "fast-command-not-found"
version = "0.1.0"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytemuck = { version = "1.5" }
getopts = "0.2"
itertools = "0.10"
memmap = "0.7"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
siphasher = "0.3"

[dev-dependencies]
indoc = "1.0.3"
zstd = "0.9"
