[package]
name = "findpkg"
version = "0.1.0"
authors = ["Alex Macleod <alex@macleod.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytemuck = "1"
getopts = "0.2"
memmap = "0.7"

[dev-dependencies]
unindent = "0.1"
pretty_assertions = "1"
